force-app/main/default/objects/Pergunta_de_Auditoria__c/Pergunta_de_Auditoria__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para criar perguntas a serem utilizadas por outros objetos.</description>
    <label>Pergunta de Auditoria</label>
    <nameField>
        <displayFormat>#{00000}</displayFormat>
        <label>Nº da Pergunta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perguntas de Auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>