force-app/main/default/objects/Pergunta_de_Auditoria__c/fields/Nome_da_Secao__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Secao__c</fullName>
    <formula>Secao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Seção</label>
    <type>Text</type>
</CustomField>