force-app/main/default/objects/Pergunta_de_Auditoria__c/fields/Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Pergunta__c</fullName>
    <description>Campo para criar a pergunta.</description>
    <inlineHelpText>Insira aqui a pergunta desejada.</inlineHelpText>
    <label>Pergunta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>