force-app/main/default/objects/Pergunta_de_Auditoria__c/fields/Posicao__c.field-meta.xml
<CustomField>
    <fullName>Posicao__c</fullName>
    <description>Campo para controlar ordem das perguntas</description>
    <inlineHelpText>Use para dizer a ordem das perguntas;
1 = Primeira
2 = Segunda
Se vazio, será ordenada por ordem alfabetica</inlineHelpText>
    <label>Posição</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>