force-app/main/default/objects/Pergunta_de_Auditoria__c/fields/Secao__c.field-meta.xml
<CustomField>
    <fullName>Secao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo que relaciona as seção das perguntas com o objeto Seção.</description>
    <inlineHelpText>Seção relacionada ao tipo.</inlineHelpText>
    <label>Seção</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Secao__c.Tipo_de_Auditoria__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tipo_de_Auditoria__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Secao__c</referenceTo>
    <relationshipLabel>Perguntas de Auditoria</relationshipLabel>
    <relationshipName>Perguntas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>