force-app/main/default/objects/Pergunta_de_Auditoria__c/fields/Tipo_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Auditoria__c</fullName>
    <description>Determina onde será utilizado as perguntas.</description>
    <inlineHelpText>Selecione onde as perguntas serão utilizadas.</inlineHelpText>
    <label>Tipo de Auditoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>