force-app/main/default/objects/Pergunta_de_Auditoria__c/validationRules/Bloqueia_edicao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_edicao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

OR(
ISCHANGED(Pergunta__c),
ISCHANGED(Tipo__c),
ISCHANGED(Secao__c),
ISCHANGED(Tipo_de_Auditoria__c ),
ISCHANGED(Posicao__c)
),

 ISPICKVAL(Status__c, &quot;Ativo&quot;)
)</errorConditionFormula>
    <errorMessage>Uma pergunta ativa não pode ser editada.
Clone a mesma para poder editar.</errorMessage>
</ValidationRule>