force-app/main/default/objects/Pergunta_de_Auditoria__c/validationRules/Bloqueia_edicao_status_inativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_edicao_status_inativo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    PRIORVALUE(Status__c) = &quot;INATIVO&quot;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Perguntas desativadas não podem ser reativadas.</errorMessage>
</ValidationRule>