force-app/main/default/objects/Pergunta_de_Auditoria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pergunta__c</columns>
    <columns>Secao__c</columns>
    <columns>Tipo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>