force-app/main/default/objects/Pergunta_de_Auditoria__c/listViews/Boas_praticas.listView-meta.xml
<ListView>
    <fullName>Boas_praticas</fullName>
    <columns>NAME</columns>
    <columns>Pergunta__c</columns>
    <columns>Secao__c</columns>
    <columns>Tipo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Auditoria__c</field>
        <operation>equals</operation>
        <value>Auditoria de boas práticas</value>
    </filters>
    <label>Boas praticas</label>
</ListView>