force-app/main/default/objects/Pergunta_de_Auditoria__c/listViews/X5S.listView-meta.xml
<ListView>
    <fullName>X5S</fullName>
    <columns>NAME</columns>
    <columns>Pergunta__c</columns>
    <columns>Secao__c</columns>
    <columns>Tipo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Auditoria__c</field>
        <operation>equals</operation>
        <value>5S</value>
    </filters>
    <label>5S</label>
</ListView>